--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ REPLICATE_API_KEY = ""
 REPLICATE_API_TOKEN = ""
 # Anthropic
 ANTHROPIC_API_KEY = ""
+# AWS Bedrock
+AWS_ACCESS_KEY_ID = ""
+AWS_SECRET_ACCESS_KEY = ""
+AWS_REGION_NAME = "us-west-1"
 # Infisical
 INFISICAL_TOKEN = ""
 # Novita AI
