--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -22,12 +22,12 @@ model_list:
 
   - model_name: bedrock/claude-sonnet-4-5
     litellm_params:
-      model: bedrock/anthropic.claude-sonnet-4-5-20250929-v1:0
+      model: bedrock/us.anthropic.claude-sonnet-4-5-20250929-v1:0
       aws_region_name: os.environ/AWS_REGION_NAME
 
   - model_name: bedrock/claude-sonnet-4
     litellm_params:
-      model: bedrock/anthropic.claude-sonnet-4-20250514-v1:0
+      model: bedrock/us.anthropic.claude-sonnet-4-20250514-v1:0
       aws_region_name: os.environ/AWS_REGION_NAME
 
 
