--- a/models.yaml
+++ b/models.yaml
@@ -174,6 +174,6 @@ provider_models:
       - name: bedrock/claude-opus-4-6
         id: bedrock/us.anthropic.claude-opus-4-6-v1
       - name: bedrock/claude-sonnet-4-5
-        id: bedrock/anthropic.claude-sonnet-4-5-20250929-v1:0
+        id: bedrock/us.anthropic.claude-sonnet-4-5-20250929-v1:0
       - name: bedrock/claude-sonnet-4
-        id: bedrock/anthropic.claude-sonnet-4-20250514-v1:0
+        id: bedrock/us.anthropic.claude-sonnet-4-20250514-v1:0
