--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -34,18 +34,19 @@ model_list:
   - model_name: auto
     litellm_params:
       model: "auto_router/auto_router_1"
-      auto_router_config_path: "/home/ubuntu/clawdrouter/litellm/router_strategy/auto_router/routing_rules.yaml"
+      auto_router_config_path: "/app/litellm/router_strategy/auto_router/routing_rules.yaml"
       auto_router_default_model: "gemini/gemini-3-flash-preview"
 
 # General Settings
 general_settings:
+  database_url: "os.environ/DATABASE_URL"
   forward_client_headers_to_llm_api: true
-  store_model_in_db: false
+  store_model_in_db: true
 
 # LiteLLM Settings
 router_settings:
   model_group_alias: {}
 
 litellm_settings:
-  master_key: sk-1234
+  master_key: os.environ/LITELLM_MASTER_KEY
   drop_params: true
