--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -1,5 +1,4 @@
 model_list:
-
   - model_name: google/gemini-2.5-flash-lite
     litellm_params:
       model: gemini/gemini-2.5-flash-lite
@@ -30,23 +29,27 @@ model_list:
       model: bedrock/us.anthropic.claude-sonnet-4-20250514-v1:0
       aws_region_name: os.environ/AWS_REGION_NAME
 
+  - model_name: anthropic/claude-sonnet-4-6
+    litellm_params:
+      model: anthropic/claude-sonnet-4-6
+      api_key: os.environ/ANTHROPIC_API_KEY
 
   - model_name: auto
     litellm_params:
       model: "auto_router/auto_router_1"
-      auto_router_config_path: "/app/litellm/router_strategy/auto_router/routing_rules.yaml"
+      auto_router_config_path: "os.environ/CLAWROUTER_ROUTING_RULES_PATH"
       auto_router_default_model: "gemini/gemini-3-flash-preview"
 
 # General Settings
 general_settings:
+  master_key: os.environ/LITELLM_MASTER_KEY
   database_url: "os.environ/DATABASE_URL"
   forward_client_headers_to_llm_api: true
-  store_model_in_db: true
+  store_model_in_db: false  # Overridden by STORE_MODEL_IN_DB env var in Docker mode
 
 # LiteLLM Settings
 router_settings:
   model_group_alias: {}
 
 litellm_settings:
-  master_key: os.environ/LITELLM_MASTER_KEY
   drop_params: true
