--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -20,6 +20,11 @@ model_list:
       model: bedrock/us.anthropic.claude-opus-4-6-v1
       aws_region_name: os.environ/AWS_REGION_NAME
 
+  - model_name: bedrock/claude-sonnet-4-6
+    litellm_params:
+      model: bedrock/us.anthropic.claude-sonnet-4-6
+      aws_region_name: os.environ/AWS_REGION_NAME
+
   - model_name: bedrock/claude-sonnet-4-5
     litellm_params:
       model: bedrock/us.anthropic.claude-sonnet-4-5-20250929-v1:0
